# python_ai_learn

./: .gitignore  GEMINI.md  feedback_data.json  pyproject.toml
ai_fine_tuning/: Modelfile  data.jsonl  fine_tuning.md  fine_tuning.py  kaggle_v1.md  kaggle_v2.md  merge_model.py  requirements.txt
googel_ai_doc/: create_process.py  debug_schema.py  field_mapping.json  manage_processor_schema.py  ocr_gemini_feedback.py  ocr_process_file.py  process_document_sample.py
mcp_demo/: exchange_rate_mcp_sse.py  exchange_rate_mcp_sse_使用範例.md  mcp_教學.md
ollama_fine_tuning/: README.md  data.jsonl  fine_tuning.py  fine_tuning_strategy.md  generate_data.py  merge_model.py
ollama_ocr/: __init__.py  client.py  main.py  ocr_engine.py  result.json  spec.md  structure_engine.py  verification_test.py
saa_c03/: read_pdf.py  split_pdf.py  translate_json.py
