[project]
name = "python-ai-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# 建議降至 >=3.11 或 >=3.12。
# Python 3.13 非常新，許多 ML 庫 (如 PyTorch, bitandbytes) 可能尚未完全支援或有編譯問題。
# 有調整都可以直接使用 uv sync
# uv add <套件名稱> 會同時刷新這個檔案跟lock
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.0",
    "aiosqlite>=0.20.0",
    "autogen-agentchat>=0.2.0", # 注意：Autogen 版本變動快，建議檢查是否需要 0.4+ 的新架構
    "autogenstudio>=0.0.50",
    "black>=24.0.0",
    "google-generativeai>=0.8.0",
    "google-search-results>=2.4.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "litellm>=1.50.0",
    "matplotlib>=3.9.0",
    "mcp>=1.0.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.50.0",
    "pyngrok>=7.2.0",
    "redis>=5.0.0", # 建議使用較新的 5.x 版本
    "requests>=2.32.0",
    "requests-html>=0.10.0",
    "rich>=13.0.0",
    "uvicorn>=0.32.0",
    # --- ML 核心庫 (已修正版本號) ---
    # 原始的 4.57.1, 2.9.0 等版本目前(2025年初)尚未發布，改為寬鬆限制讓 uv 自動抓最新穩定版
    "transformers>=4.46.0",
    "datasets>=3.0.0",
    "peft>=0.13.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0", # Mac M系列晶片需注意 bitsandbytes 支援性
    "trl>=0.12.0",
    "torch>=2.5.0", # PyTorch 2.9 尚未存在，目前穩定版約在 2.5.x - 2.6.x
    "python-dotenv>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "langchain>=0.3.0",
    "httpx>=0.27.0",
    "starlette>=0.41.0",
    "pypdf>=5.0.0",
    "pymupdf==1.26.6",
    "deep-translator>=1.11.4",
]

# 這是 uv (以及現代 Python 專案) 必須的區塊，告訴工具如何打包
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 既然你使用了 setuptools，這部分設定保留
[tool.setuptools]
packages = [
    "auto_gen",
    "mcp_demo",
    "gen_code_xai",
    "langchain_demo",
    "gen_code_gemini"
]
