[project]
name = "python-ai-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# 建議降至 >=3.11 或 >=3.12。
# Python 3.13 非常新，許多 ML 庫 (如 PyTorch, bitandbytes) 可能尚未完全支援或有編譯問題。
# 有調整都可以直接使用 uv sync
# uv add <套件名稱> 會同時刷新這個檔案跟lock
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "autogen-agentchat>=0.5.6",
    "autogen-ext[azure,magentic-one,ollama,openai]>=0.5.6",
    "autogenstudio>=0.0.49",
    "black>=25.1.0",
    "google-generativeai>=0.8.5",
    "google-search-results>=2.4.2",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.0.10",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.21",
    "langgraph>=0.4.8",
    "litellm>=1.72.6",
    "matplotlib>=3.10.3",
    "mcp>=1.6.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.82.0",
    "pyngrok>=7.2.5",
    "redis==4.6.0",
    "requests>=2.32.3",
    "requests-html>=0.10.0",
    "rich>=14.0.0",
    "uvicorn>=0.34.2",
    "transformers==4.57.1",
    "datasets==4.4.1",
    "peft==0.17.1",
    "accelerate==1.11.0",
    "bitsandbytes==0.48.2; sys_platform != 'darwin'",
    "trl==0.25.0",
    "torch==2.9.0",
    "python-dotenv==1.1.0",
    "langchain-text-splitters==0.3.8",
    "langchain==0.3.25",
    "httpx==0.28.1",
    "starlette==0.46.2",
    "mlx-lm>=0.28.4",
    "huggingface-hub>=0.36.0",
    "google-cloud-documentai>=3.7.0",
]

[tool.setuptools]
packages = [
    "auto_gen",
    "mcp_demo",
    "gen_code_xai",
    "langchain_demo",
    "gen_code_gemini"
]
